# TIFA_development

./: [C[D  [C[D.pub  .gitignore  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
TE/: Navigasi.py
TK/: Navigasi_httpReq.py
archive/RaspberryPi/deli_navigation/: CMakeLists.txt  basemove.py  package.xml
archive/RaspberryPi/deli_navigation/data/: trajectory.yaml
archive/RaspberryPi/deli_navigation/launch/: amcl.launch  pose_path.launch
archive/RaspberryPi/deli_navigation/scripts/: am.launch  odon.py  path_fol.py  read_track.py  robot_pose.py  yaml_conv.py
archive/RaspberryPi/deli_navigation/src/: basemove2.py  basemove3.py  basemove4.py  jalan.py  trajectory_xy_new.csv
archive/RaspberryPi/ml/: CMakeLists.txt  package.xml
archive/RaspberryPi/ml/src/: a.py  laser_data.csv  pose_data.csv  scan.py  scan_obstacle.py  slamcloud.py
archive/RaspberryPi/pid_proccess/: CMakeLists.txt  CMakeLists.txt.save  package.xml
archive/RaspberryPi/pid_proccess/launch/: combined_launch.launch
archive/RaspberryPi/pid_proccess/scripts/: coba_odom.py  coba_odom2.py  csva.py  data_processor.py  data_processor.py.save  data_processor_backup.py  data_processor_bijak.py  data_proses_test.py  data_proses_test.py.save  data_proses_test.py.save.1  editcsv.py  manual_control.py  manual_control2.py  odometry.py  odometry.py.save  odometry2.py  odometry3.py  path20_20.csv  rekam.py  rekam2.py  send_vel.py  telcaf.csv  telcaf2.csv  tescsv.csv  trajectory.csv  trajectory2.csv  trajectory3.csv  trajectory4.csv  trajectory5.csv  trajectory_xy_new2.csv  trajectorycoba.csv  trajectorycoba2.csv
archive/RaspberryPi/ros2esp/: CMakeLists.txt  package.xml
catkin_ws/: trajectory5.csv
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/src/tifa_control/: CMakeLists.txt
catkin_ws/src/tifa_control/launch/: amcl.launch  manual_control.launch  tuning_param_scheme.launch  ultrasonic.launch
catkin_ws/src/tifa_control/scripts/: T5.csv  coba_odom.py  laserscan_to_pointcloud.py  mapa.yaml  meancsv.py  path.py  path.py.save  serial_ultrasonic_reader.py  tifa_teleop_key.py  trajectory5.csv  trajectory_xy5.csv  trajectory_xy6.csv
catkin_ws/src/tifa_nav/: CMakeLists.txt
catkin_ws/src/tifa_nav/config/: ekf.yaml
catkin_ws/src/tifa_nav/launch/: amcl.launch  ekf.launch  real_time_nav.launch  tifa_navigation.launch
catkin_ws/src/tifa_nav/maps/: RutePameran.csv  knn_path.csv  knn_path2.csv  knn_path3.csv  knn_path_2.csv  knn_path_new.csv  knn_path_new_10.csv  knn_path_new_2.csv  knn_path_new_3.csv  knn_path_new_4.csv  knn_path_new_5.csv  knn_path_new_6.csv  knn_path_new_7.csv  knn_path_new_8.csv  knn_path_new_9.csv  knn_path_route_1.csv  knn_path_route_2_1.csv  knn_path_route_2_2.csv  knn_path_route_2_3.csv  knn_path_route_3_1.csv  path_points.csv
catkin_ws/src/tifa_nav/scripts/: .csv_to_visualization.py.swp  BFSUCD_DINAMIK.py  csv_to_visualization.py  db_connect2.py  db_connect2.py.save  db_connect3.py  db_connect4.py  db_connect5.py  fb_connect.py  host_connect.py  image_connect.py  knn_copy_ros.py  modif_tifa_flw_trjktry.py  notes.py  tes_tifa_navigation_topics.py  tifa_nav_fb.py  tifa_navigation.py  tifa_navigation_Dinamis.py  tifa_navigation_topics.py  tifa_navigation_topics2.py  tifa_navigation_topics3.py
code/: Navigasi2.py  Navigasi3.py  Navigasi_Tes2.py  Tifa_Base_Control_new.code-workspace  main_new.cpp  range.py  tifa_update
code/PID_teensy/: PID_teensy.ino
code/PS4_controller/: PS4_controller.ino
code/arduino_nano_to_STM/: arduino_nano_to_STM.ino
code/controll_motor_teensy/: controll_motor_teensy.ino
code/esp_multiCore_inverseKinematic/: esp_multiCore_inverseKinematic.ino
code/esp_odom_kalman/: esp_odom_kalman.ino
code/esp_odom_trajectory/: esp_odom_trajectory.ino
code/read_ultrasonic/: read_ultrasonic.ino
csv_data/: White_map_NewMaps.csv  frames.gv  sidang1_white_Nav.csv
documentation/IoT/: Desain aplikasi TIFA (view only).url  ERD TIFA.drawio
documentation/POWER/: BMS Spec.xlsx  Komponen List.xlsx
documentation/SISTEM/: _autosave-deli2.kicad_pcb  deli2.kicad_sch
documentation/umum/: images.jfif
maps_folder/: map.yaml  mapping_data.bag.yaml  my_map2.yaml  my_map3.yaml  my_map4.yaml  my_map_tes.yaml  ruang_rapat.yaml
matrikulasi/: ppt_kinematika dasar(robot 2 roda differential steering)
prototype/: Hinge_ext_enc v5.stl  back_mount v1.stl  base v4.stl  base v5.stl
prototype/omni-bot/: AS_PlasticWheel v5.stl  base v9.stl  base_layer2 v1.stl
raspitoesp/: abc  abc.py  allcode.py  fixallcode.py  fixbat.py  last.py  new_code.py  raspitoesp32.py  raspitoesp322.py  raspitoespp.py  raspitoesppp.py
reference/: Percakapan_Kinematika_Robot_Following_Mode.docx  create_ros_package.txt
supabase_bridge_send_goal/: CMakeLists.txt  package.xml
supabase_bridge_send_goal/launch/: bridge.launch.py
supabase_bridge_send_goal/src/: bridge_node.cpp
supabase_nav2_bridge_cpp/: CMakeLists.txt  package.xml
supabase_nav2_bridge_cpp/launch/: supabase_nav2_bridge_cpp.launch.py
supabase_nav2_bridge_cpp/src/: bridge_node.cpp
tifa_bot/: CMakeLists.txt  package.xml
tifa_bot/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  telcoff_map.rviz  view.rviz
tifa_bot/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
tifa_bot/launch/: launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  rsp.launch.py
tifa_bot/maps/: my_map.pgm  my_map.yaml  my_map_2.pgm  my_map_2.yaml  telcoff_map2_save.pgm  telcoff_map2_save.yaml  telcoff_map2_serial.data  telcoff_map3_save.pgm  telcoff_map3_save.yaml  telcoff_map3_serial.data  telcoff_map_save.pgm  telcoff_map_save.yaml  telcoff_map_serial.data
tifa_bot/src/: supabase_send_goal_node.cpp
tifa_bot/worlds/: obstacles.world
tugas_akhir/: tifa_navigation_Dinamis.py  tifa_navigation_Dinamis2.py  tifa_navigation_Dinamis3.py  tifa_navigation_Dinamis4.py
tutorial_sop/: TutorialMappingAuto.txt  TutorialSaveHasilMapping.txt
view_frames/: frames_2025-09-05_16.32.58.gv
(+98 files in other folders)
