<?xml version="1.0"?>
<package format="3">
  <name>supabase_nav2_bridge_cpp</name>
  <version>0.1.0</version>
  <description>Bridge Supabase (Postgres) Nav2 NavigateToPose (C++/ament_cmake)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <exec_depend>libpq-dev</exec_depend>

  <export/>
</package>
